# AviSynthPlus-NNEDI3CL

./: CHANGELOG.md  CMakeLists.txt  LICENSE  NNEDI3CL_rpow2.avsi  README.md
msvc/: NNEDI3CL.sln  NNEDI3CL.vcxproj  NNEDI3CL.vcxproj.filters
src/: NNEDI3CL.cpp  NNEDI3CL.rc
